# icemodoro

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: cd.yml  ci.yml  release-plz.yml  rust.yml
src/: main.rs  persistence.rs  pomodoro.rs  report.rs  setting.rs
