[package]
name = "icemodoro"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["smol", "image"] }
iced_aw = { version = "0.12.2", features = ["number_input", "tabs"] }

# Used for sending desktop notifications (timer completion alerts)
notify-rust = "4.11.7"

# Required for persisting the application data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories-next = "2.0"

# Cross-platform file dialogs (for import/export functionality)
rfd = "0.15"
