[package]
name = "icemodoro"
version = "0.1.2"
edition = "2024"
description = "A simple Pomodoro and To-Do list application built with the Iced GUI library"
repository = "https://github.com/SzilvasiPeter/icemodoro"
readme = "README.md"
license = "MIT"
keywords = ["iced", "ui", "pomodoro", "todo"]

[dependencies]
iced = { version = "0.13.1", default-features = false, features = ["tiny-skia", "smol", "image"] }
iced_aw = { version = "0.12.2", features = ["number_input", "tabs"] }

# Used for sending desktop notifications (timer completion alerts)
notify-rust = "4.11.7"
rand = "0.9.2"

# Required for persisting the application data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories-next = "2.0"

# Cross-platform file dialogs (for import/export functionality)
rfd = "0.15"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
